force-app/main/default/objects/Protection_Metric__c/Protection_Metric__c.object-meta.xml
<CustomObject>
    <description>Candidate privacy and reveal-control metrics for Rescue dashboard.</description>
    <label>Protection Metric</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protection Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>