force-app/main/default/objects/Protection_Metric__c/fields/Approval_Rate__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rate__c</fullName>
    <description>Percentage of reveal requests approved by the candidate.</description>
    <label>Approval Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>