force-app/main/default/objects/Protection_Metric__c/fields/Average_Time_To_Decision_Hours__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_To_Decision_Hours__c</fullName>
    <description>Average hours between reveal request and candidate approve/reject decision.</description>
    <label>Average Time To Decision Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>