force-app/main/default/objects/Protection_Metric__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Protection Metrics</relationshipLabel>
    <relationshipName>Protection_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>