force-app/main/default/objects/Protection_Metric__c/fields/Masked_Profiles_Shared__c.field-meta.xml
<CustomField>
    <fullName>Masked_Profiles_Shared__c</fullName>
    <label>Masked Profiles Shared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>