force-app/main/default/objects/Protection_Metric__c/fields/Privacy_Score__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Score__c</fullName>
    <formula>MAX(0, MIN(100, 70 + (Reveals_Declined__c * 5) - (Reveals_Approved__c * 3)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Privacy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>