force-app/main/default/objects/Protection_Metric__c/fields/Reveal_Requests_Received__c.field-meta.xml
<CustomField>
    <fullName>Reveal_Requests_Received__c</fullName>
    <label>Reveal Requests Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>