force-app/main/default/objects/Protection_Metric__c/fields/Reveals_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reveals_Approved__c</fullName>
    <label>Reveals Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>